[tool.poetry]
name = "whitenose-maker"
version = "0.1.0"
description = ""
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach2.0"
readme = "README.md"
packages = [{include = "whitenose_maker"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.2"
numpy = "^1.25.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
